--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -1,17 +1,26 @@
-img {
-    width: 200px;
-    height: 200px;
-}
-
-.gallery {
+.container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px, 20px;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
+    gap: 20px;
+    justify-items: center;
+    margin: 10px;
 }
 
 .spotCard {
-    width: 350px;
-    height: 350px;
+    width: 100%;
+}
+
+.spotImage {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+}
+
+@media screen and (min-width:1600px) {
+    .container {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 a {
