--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -12,12 +12,12 @@
 
 .spotImage {
     width: 100%;
-    height: 250px;
+    height: 300px;
     object-fit: cover;
     object-position: center;
 }
 
-@media screen and (min-width:1600px) {
+@media screen and (min-width:1500px) {
     .container {
         grid-template-columns: repeat(4, 1fr);
     }
@@ -26,4 +26,5 @@
 a {
     color: black;
     text-decoration: none;
+    cursor: pointer;
 }
