added to site-wide css + added cursor style in OpenModalMenuItem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,11 @@
 /* TODO: Add sitewide styles */
+
+a {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+button:hover {
+    cursor: pointer;
+}
