--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -1,4 +1,4 @@
-.container {
+.spotContainer {
     max-width: 1000px;
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -9,6 +9,8 @@
         "gallery gallery"
         "details box; */
     column-gap: 30px;
+    row-gap: 20px;
+    margin: auto;
 
 }
 
@@ -63,47 +65,47 @@
     width: 100%;
 }
 
-img:nth-child(1) {
+.gallery img:nth-child(1) {
     grid-area: feature;
-    width: 490px;
+    width: 100%;
     height: 405px;
     object-fit: cover;
     object-position: center;
 }
 
-img:nth-child(2) {
+.gallery img:nth-child(2) {
     grid-area: img2;
-    width: 250px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
     object-position: center;
 }
 
-img:nth-child(3) {
+.gallery img:nth-child(3) {
     grid-area: img3;
-    width: 250px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
     object-position: center;
 }
 
 
-img:nth-child(4) {
+.gallery img:nth-child(4) {
     grid-area: img4;
-    width: 250px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
     object-position: center;
 }
 
-img:nth-child(5) {
+.gallery img:nth-child(5) {
     grid-area: img5;
-    width: 250px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
     object-position: center;
 }
 
-button {
+#reserve {
     width: 100%;
 }
