--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,8 @@
 /* TODO: Add sitewide styles */
 body {
     font-family: 'Quicksand', sans-serif;
+    /* max-width: 1000px;
+    margin: auto; */
 }
 
 a {
