--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,18 @@
+.nav {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+
 .profile-dropdown {
-    /* position: absolute; */
+    position: absolute;
+}
+
+.dropdown {
+    border: 1px solid black;
+    padding: 10px;
+    margin-top: 10px;
+    margin-left: -40px;
 }
 
 .hidden {
