--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,7 +1,23 @@
-.label {
-    background-color: aqua;
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    flex-basis: auto;
+    padding: 0px 20px 20px 20px;
+    width: fit-content;
+}
+
+.login input {
+    width: 300px;
+}
+
+.login button {
+    margin-top: 15px;
+    width: 308px;
 }
 
 .error {
+    margin-top: -5px;
     color: red;
 }
