--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -54,7 +54,7 @@
     border-radius: 8px;
     border-spacing: 5px;
     width: calc(100% - 35px);
-    height: auto;
+    height: calc(100% - 15px);
     padding: 15px;
 }
 
@@ -106,6 +106,15 @@
     object-position: center;
 }
 
-#reserve {
+.boxInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 5%;
+}
+
+.box button {
     width: 100%;
+    height: 50%;
+    font-size: 16px;
 }
