--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -17,6 +17,12 @@
     object-position: center;
 }
 
+.spotInfo {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
 @media screen and (min-width:1200px) {
     .container {
         grid-template-columns: repeat(4, 1fr);
