--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -10,11 +10,21 @@
 
 .login input {
     width: 300px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: medium;
+    margin-bottom: 5px;
+
 }
 
 .login button {
-    margin-top: 15px;
+    margin-top: 5px;
     width: 308px;
+    height: 35px;
+}
+
+.login button:disabled {
+    background-color: gainsboro;
+    cursor: not-allowed;
 }
 
 .error {
