--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,7 +1,21 @@
 .nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 10px;
+}
+
+.nav h1 {
+    font-family: 'Yeseva One', serif;
+    color: #1c5759;
+}
+
+.menuIcon {
+    color: #d3bcc9;
+    cursor: pointer;
+    border: #d3bcc9 solid 2px;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .profile-dropdown {
@@ -9,13 +23,20 @@
 }
 
 .dropdown {
-    border: 1px solid black;
-    padding: 10px;
-    margin-top: 10px;
-    margin-left: -40px;
+    /* box-shadow: 2px 1px 5px #d3bcc9; */
+    border: #d3bcc9 solid 2px;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 8px;
+    margin-left: -67px;
     background-color: white;
+    width: 100px;
 }
 
 .hidden {
     display: none;
+}
+
+.modal {
+    border-radius: 50px;
 }
