--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -58,6 +58,32 @@
     padding: 15px;
 }
 
+.boxInfo {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-areas: "price stars"
+        "button button";
+    gap: 5px;
+}
+
+.box div:nth-child(1) {
+    grid-area: price;
+    width: 100%;
+}
+
+.box div:nth-child(2) {
+    grid-area: stars;
+    justify-self: end;
+    align-self: end;
+}
+
+.box button {
+    grid-area: button;
+    width: 100%;
+    height: 50%;
+    font-size: 16px;
+}
+
 .reviews {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
@@ -106,15 +132,9 @@
     object-position: center;
 }
 
-.boxInfo {
+/* .boxInfo {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
     margin-bottom: 5%;
-}
-
-.box button {
-    width: 100%;
-    height: 50%;
-    font-size: 16px;
-}
+} */
