--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,6 +7,8 @@
 
 .nav h1 {
     font-family: 'Yeseva One', serif;
+    font-size: 40px;
+    ;
     color: #1c5759;
 }
 
@@ -15,15 +17,11 @@
     cursor: pointer;
     border: #d3bcc9 solid 2px;
     border-radius: 20px;
-    padding: 10px;
+    padding: 15px 15px 12px 15px;
 }
 
 .profile-dropdown {
     position: absolute;
-}
-
-.dropdown {
-    /* box-shadow: 2px 1px 5px #d3bcc9; */
     border: #d3bcc9 solid 2px;
     border-radius: 5px;
     padding: 15px;
