fixed tooltip and clear reviews

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,7 @@ a {
 button {
     font-family: 'Josefin Sans', sans-serif;
     color: white;
-    background-color: #d3bcc9;
+    background-color: #d57794;
     font-size: medium;
     font-weight: bold;
     border-radius: 5px;
