--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -10,6 +10,20 @@
     width: 100%;
 }
 
+.toolTip {
+    display: none;
+    position: fixed;
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 3px;
+    border: black 1px solid;
+    background-color: white;
+}
+
+.spotCard:hover .toolTip {
+    display: block;
+}
+
 .spotImage {
     width: 100%;
     height: 250px;
