--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -15,9 +15,10 @@
     position: fixed;
     margin-left: 10px;
     margin-top: 10px;
-    padding: 3px;
+    padding: 2px 3px 1px 3px;
     border: black 1px solid;
     background-color: white;
+    font-weight: 400;
 }
 
 .spotCard:hover .toolTip {
