--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -12,7 +12,7 @@
 
 .toolTip {
     display: none;
-    position: fixed;
+    position: absolute;
     margin-left: 10px;
     margin-top: 10px;
     padding: 2px 3px 1px 3px;
