--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -49,7 +49,7 @@
     border-spacing: 5px;
     width: calc(100% - 35px);
     height: calc(100% - 15px);
-    padding: 15px;
+    padding: 15px 15px 6px 15px;
 }
 
 .boxInfo {
@@ -74,7 +74,6 @@
 .box button {
     grid-area: button;
     width: 100%;
-    height: 50%;
     font-size: 16px;
 }
 
