--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,3 +67,28 @@ h1 {
 h2 {
     margin-bottom: 10px;
 }
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    flex-basis: auto;
+    padding: 10px 25px 30px 25px;
+    width: fit-content;
+}
+
+.modal button {
+    margin-top: 5px;
+    width: 315px;
+    height: 35px;
+}
+
+#noButton {
+    background-color: gray;
+}
+
+.error {
+    margin-top: -5px;
+    color: red;
+}
