--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,7 +82,7 @@ h2 {
 }
 
 .error {
-    margin-top: -5px;
+    margin-top: -10px;
     margin-left: 10px;
     font-size: 12px;
     color: red;
@@ -110,6 +110,7 @@ textarea {
     font-size: 16px;
     width: 475px;
     height: 75px;
+    margin-bottom: 10px;
     resize: none;
     border-radius: 5px;
     padding: 10px 10px 5px 10px;
