--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -108,6 +108,7 @@ input {
 textarea {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
+    font-weight: 300;
     width: 475px;
     height: 75px;
     margin-bottom: 10px;
