--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -3,7 +3,8 @@
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
     gap: 20px;
     justify-items: center;
-    margin: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .spotCard {
