--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -5,8 +5,8 @@
     grid-template-rows: auto;
     column-gap: 30px;
     row-gap: 20px;
-    margin: auto;
-
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .header {
@@ -54,9 +54,8 @@
 
 .boxInfo {
     display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-areas: "price stars"
-        "button button";
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "price stars";
     gap: 5px;
 }
 
@@ -73,6 +72,7 @@
 
 .box button {
     grid-area: button;
+    margin-top: 10px;
     width: 100%;
     font-size: 16px;
 }
@@ -125,9 +125,22 @@
     object-position: center;
 }
 
-/* .boxInfo {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    margin-bottom: 5%;
-} */
+@media screen and (max-width:500px) {
+    .spotContainer {
+        grid-template-columns: 1fr;
+    }
+
+    .header {
+        grid-column: 1 / 3;
+    }
+
+    .details {
+        grid-column: 1 / 3;
+        grid-row: 3/4;
+    }
+
+    .box {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+    }
+}
