--- a/frontend/src/components/CreateReviewModal/CreateReviewModal.css
+++ b/frontend/src/components/CreateReviewModal/CreateReviewModal.css
@@ -41,3 +41,9 @@ textarea {
     margin-top: 30px;
     margin-bottom: 5px;
 }
+
+@media screen and (max-width: 500px) {
+    .modal textarea {
+        width: 100%;
+    }
+}
