--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -5,8 +5,9 @@
     grid-template-rows: auto;
     column-gap: 30px;
     row-gap: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    /* margin-left: 20px;
+    margin-right: 20px; */
+    margin: auto;
 }
 
 .header {
@@ -128,6 +129,8 @@
 @media screen and (max-width:500px) {
     .spotContainer {
         grid-template-columns: 1fr;
+        margin-right: 20px;
+        margin-left: 20px;
     }
 
     .header {
