--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -15,6 +15,7 @@
     grid-row: 1 / 2;
     justify-self: start;
     width: 100%;
+    margin-top: -22px;
 }
 
 .gallery {
@@ -126,10 +127,33 @@
     object-position: center;
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:800px) {
     .spotContainer {
         grid-template-columns: 1fr;
         margin-right: 20px;
+        margin-left: 20px;
+    }
+
+    .header {
+        grid-column: 1 / 3;
+    }
+
+    .details {
+        grid-column: 1 / 3;
+        grid-row: 3/4;
+    }
+
+    .box {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+    }
+}
+
+@media screen and (min-width: 801),
+(max-width:1024px) {
+    .spotContainer {
+        grid-template-columns: 1fr;
+        margin-right: 30px;
         margin-left: 20px;
     }
 
