--- a/frontend/src/components/SpotForm/SpotForm.css
+++ b/frontend/src/components/SpotForm/SpotForm.css
@@ -25,10 +25,6 @@
     margin-top: 20px;
 }
 
-/* .previewImageContainer {
-    margin-bottom: 10px !important;
-} */
-
 .imageContainer {
     margin-bottom: 20px !important;
 }
@@ -107,14 +103,24 @@
 }
 
 .spotForm hr {
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
     width: 494px;
 }
 
-.spotForm hr:last-child {
-    margin-top: 30px;
-    margin-bottom: 20px;
+.spotForm hr.extraMarginHr {
+    margin-top: 25px !important;
+    margin-bottom: 10px !important;
+}
+
+.spotForm hr.extraMarginHrPrice {
+    margin-top: 15px !important;
+    margin-bottom: 10px !important;
+}
+
+.spotForm hr.extraMarginHrImg5 {
+    margin-top: 25px !important;
+    margin-bottom: 10px !important;
 }
 
 #submit {
@@ -122,11 +128,17 @@
     justify-content: center;
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:535px) {
     form {
         width: 95%;
-        margin-left: 10px;
-        margin-right: 15px;
+        margin-left: 20px;
+        margin-right: 25px;
+    }
+
+    .spotForm {
+        width: 95%;
+        margin-left: 0px;
+        margin-right: 25px;
     }
 
     .spotForm input,
