--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -17,8 +17,10 @@
     margin-left: 10px;
     margin-top: 10px;
     padding: 2px 3px 1px 3px;
-    border: black 1px solid;
-    background-color: white;
+    border: #4a6274 1px solid;
+    background-color: #4a6274;
+    /* font-family: 'Yeseva One', serif; */
+    color: white;
     font-weight: 400;
 }
 
