--- a/frontend/src/components/SpotForm/SpotForm.css
+++ b/frontend/src/components/SpotForm/SpotForm.css
@@ -112,7 +112,7 @@
     width: 494px;
     height: 1px;
     border: none;
-    background-color: #e2725a;
+    background-color: #f9ddd2;
 }
 
 .spotForm hr.extraMarginHr {
