--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -15,14 +15,27 @@
     grid-row: 1 / 2;
     justify-self: start;
     width: 100%;
-    margin-top: -22px;
+}
+
+.spotName {
+    font-family: 'Yeseva One', serif;
+    font-size: 32px;
+    color: #4a6274;
+    margin-bottom: 20px;
+    width: fit-content;
+    padding: 10px;
+    border-radius: 5px;
+    border: 2px #f9ddd2 solid;
+    background-color: #f9ddd2;
+    box-shadow: 2px 2px 0px #e2725a;
 }
 
 .gallery {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
     justify-self: start;
-
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .galleryContainer {
@@ -46,7 +59,7 @@
     grid-column: 2 / 3;
     grid-row: 3 / 4;
     justify-self: end;
-    border: #4a6274 2px solid;
+    border: #79aeb2 2px solid;
     box-shadow: 2px 2px 0px #f9ddd2;
     border-radius: 8px;
     border-spacing: 5px;
@@ -64,6 +77,7 @@
 
 .box #starReviews::first-letter {
     color: #e2725a !important;
+    text-shadow: 12px 12px #f9ddd2 !important;
 }
 
 .box div:nth-child(1) {
@@ -132,7 +146,7 @@
     object-position: center;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:700px) {
     .spotContainer {
         grid-template-columns: 1fr;
         margin-right: 20px;
@@ -154,16 +168,18 @@
     }
 }
 
-@media screen and (min-width: 801),
+
+
+@media screen and (min-width: 701),
 (max-width:1024px) {
     .spotContainer {
-        grid-template-columns: 1fr;
-        margin-right: 30px;
+        margin-right: 20px;
         margin-left: 20px;
     }
 
-    .header {
+    /* .header {
         grid-column: 1 / 3;
+        margin-top: 0px;
     }
 
     .details {
@@ -174,5 +190,5 @@
     .box {
         grid-column: 1 / 3;
         grid-row: 4 / 5;
-    }
+    } */
 }
