--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -17,11 +17,13 @@
     margin-left: 10px;
     margin-top: 10px;
     padding: 2px 3px 1px 3px;
-    border: #e2725a 1px solid;
-    background-color: #e2725a;
+    border: #f9ddd2 1px solid;
+    background-color: #f9ddd2;
     font-family: 'Yeseva One', serif;
-    color: white;
+    color: #4a6274;
     font-weight: 400;
+    box-shadow: 2px 2px 0px #e2725a;
+    border-radius: 5px;
 }
 
 .spotCard:hover .toolTip {
@@ -33,6 +35,7 @@
     height: 250px;
     object-fit: cover;
     object-position: center;
+    border-radius: 10px;
 }
 
 .spotInfo {
@@ -44,6 +47,7 @@
 
 #starReviews::first-letter {
     color: #e2725a !important;
+    text-shadow: 1px 1px #f9ddd2;
 }
 
 
