--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -182,7 +182,7 @@ textarea:focus {
 hr {
     height: 1px;
     border: none;
-    background-color: #94acbf;
+    background-color: #f9ddd2;
 }
 
 .demoContainer {
