--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -36,6 +36,7 @@
     justify-self: start;
     border-radius: 10px;
     overflow: hidden;
+    padding-bottom: 5px;
 }
 
 .galleryContainer {
@@ -52,7 +53,7 @@
     grid-row: 3 / 5;
     justify-self: start;
     width: 100%;
-    margin-top: -18px;
+    margin-top: -20px;
 }
 
 .box {
@@ -105,6 +106,10 @@
     width: 100%;
 }
 
+.reviews h2 {
+    margin-top: 30px;
+}
+
 .gallery img:nth-child(1) {
     grid-area: feature;
     width: 100%;
@@ -151,6 +156,10 @@
         grid-template-columns: 1fr;
         margin-right: 20px;
         margin-left: 20px;
+    }
+
+    .spotContainer hr {
+        margin-top: 20px;
     }
 
     .header {
